<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="196dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="Traveller"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/countries_array"
        android:layout_width="235dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="251dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:onClick="ClientDirect"
        android:text="@string/reg"
        android:textSize="10sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_RE" />


    <EditText
        android:id="@+id/Email"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#F8F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="81dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:hint="@string/Gen"
        android:textColor="#FFFFFF"
        android:textColorHint="#FDFAFA"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/DOB"
        android:layout_width="239dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/DOB"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#F6F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#F3F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DOB" />

    <EditText
        android:id="@+id/Password_RE"
        android:layout_width="239dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/retypePW"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#F8F5F5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FAF6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="135dp"
        android:layout_height="63dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/DOB"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/Email">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="131dp"
            android:layout_height="34dp"
            android:fontFamily="sans-serif"
            android:text="Male"
            android:textColorLink="@color/white"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Female"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>